# ai-mesh

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
config/: default.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/model-runtime/: Cargo.toml
crates/model-runtime/src/: lib.rs
crates/net-libp2p/: Cargo.toml
crates/net-libp2p/src/: lib.rs
crates/node-core/: Cargo.toml
crates/node-core/src/: lib.rs
docs/: architecture.md  protocol.md  setup-guide.md  tor-integration.md
examples/single-node/: README.md
examples/two-node-mesh/: README.md
scripts/: setup-llama-server.sh
