[package]
name = "mesh-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Node configuration for ai-mesh"

[dependencies]
dirs = "5.0"
serde = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
