[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Node configuration for ai-mesh"

[dependencies]
dirs.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
