[package]
name = "node-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core primitives for ai-mesh nodes"

[dependencies]
blake2.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
